--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "author": "",
   "license": "BSD-2-Clause",
-  "dependencies" : {
-    "node-libcurl" : "latest",
+  "dependencies": {
+    "cheerio": "latest",
     "express": "latest",
-    "cheerio": "latest"
+    "node-libcurl": "latest",
+    "x-ray": "^2.3.1"
   },
   "devDependencies": {}
 }
