--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "Scappaly",
   "version": "0.0.1",
   "description": "A scrapper for Papaly",
-  "main": "server.js",
-  "directories": {
-    "doc": "doc"
-  },
+  "main": "app.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "cheerio": "latest",
     "express": "latest",
     "node-libcurl": "latest",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "x-ray": "^2.3.1"
   },
   "devDependencies": {}
